# dm-bip

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  Makefile  README.md  RELEASING.md  app.css  app.py  dm_bip.html  dm_bip.map_data.html  genindex.html  index.html  installation.html  intro.html  issue-211-planning.md  mkdocs.yml  modules.html  new-pipeline-plan.md  notebook.Makefile  objects.inv  pipeline.Makefile  pipeline_user_docs.html  py-modindex.html  pyproject.toml  schema_automator.html  schemasheets.html  scripts_format_converters.html  search.html  searchindex.js  sitemap.xml  tmp_pr177_review.md  tox.ini
.claude/commands/: sync-roadmap.md
.github/workflows/: deploy-docs.yml  docker-push-7bridges-dev.yml  docker-push-rel-man-test.yml  docker-push-sevenbridges.yml  docker-smoke-test.yml  pypi-publish.yml  qc.yml
_sources/: dm_bip.map_data.rst.txt  dm_bip.rst.txt  index.rst.txt  installation.rst.txt  schemasheets.md.txt
docs/: conf.py  dm_bip.rst  index.md  index.rst  installation.md  installation.rst  map-diagnostics.md  modules.rst  pipeline-steps.md  pipeline_user_docs.md  schema_automator.md  schema_automator.rst  schemasheets.md  scripts_format_converters.md
docs/design/: automated-harmonization-orchestration.md
harmonica/: README.md
installation/: index.html
linkml-int-enum-repro/: README.md  data.tsv  pyproject.toml  repro.sh  schema.yaml
map-diagnostics/: index.html
notebooks/: .gitignore  LinkML-Map_tutorial.ipynb  Map-CHS-Fix.ipynb  Map-CHS-Trans.ipynb  Map-COPDGene.ipynb  Map-Data.ipynb  Map-FHS-Fix.ipynb  Map-FHS-Test.ipynb  Map-FHS-Trans.ipynb  Map-HCHS-SOL-Fix.ipynb  Map-HCHS-SOL-Trans.ipynb  Map-INCLUDE-BP.ipynb  Map-INCLUDE-DS-Connect.ipynb  Map-Spec-Fix.ipynb  Preprocess-Conditions-Input-Data.ipynb  Preprocess-Demographics-DS-Connect.ipynb  README.md  Remap-Curies.ipynb  TSV_Output.ipynb  Transform-Conditions-Input-Data.ipynb  Validate_YAML.ipynb
output/: README.md
output/EnumTest/: EnumTest.yaml  EnumTest_enum-inf-disabled.yaml  EnumTest_enum-inf-disabled_plus_infer-mixed-types.yaml  EnumTest_with-enum-inf.yaml  EnumTest_with-enum-inf_plus_infer-mixed-types.yaml
output/EnumTest/mapped-data/: TEST-Person--data.yaml
output/EnumTest/validation-logs/: input-files.txt
output/ToyFromRaw/: ToyFromRaw.yaml  _prepared_inputs.mk
output/ToyFromRaw/mapped-data/: TOY-Condition--data.yaml  TOY-Demography--data.yaml  TOY-MeasurementObservation--data.yaml  TOY-Observation--data.yaml  TOY-Participant--data.yaml
output/ToyFromRaw/prepared/: pht000001.tsv  pht000002.tsv  pht000003.tsv  pht000005.tsv
output/ToyFromRaw/validation-logs/: input-files.txt
pipeline_user_docs/: index.html
schema_automator/: index.html
scripts/: map_exit_guard.sh  setup-enum-forks.sh
scripts/SevenBridgesAPI/: README.md  config.ps1  generate-task-manifest.ps1  get-task-status.ps1  submit-batch-tasks.ps1
scripts/git-hooks/: pre-commit
scripts/sevenbridges/: README.md  batch_tasks.csv  check_status.py  generate_manifest.py  get_logs.py  sbg_api.py  submit_tasks.py
scripts/workflow/: bdc-workflow.sh  notify.py  parse_trans_spec_slug.py  resolve_source.py  resolve_trans_spec_dir.py
search/: search_index.json
simple_clean/: remove_empty_columns.py  replace_values.py
src/dm_bip/: __init__.py  cli.py  generate_enum_specs.py  provenance.py
synthetic_data/: README.md
tests/: __init__.py  demo_test.py  test_remove_empty_columns.py  test_replace_values.py
tests/input/: bdchm-corey-exp.yaml  transformed_person_data_example.yaml
tests/integration/: test_dbgap_pipeline.py  test_from_enum_pipeline.py  test_from_raw_pipeline.py  test_map_exit_codes.py  test_pipeline.py  test_pre_cleaned_pipeline.py  test_updated_flatten_to_tsv_integration.py
tests/output/: Condition.tsv  Demography.tsv  Exposure.tsv  MeasurementObservation.tsv  Observation.tsv  Participant.tsv  Person.tsv  Procedure.tsv  Quantity.tsv  SdohObservation.tsv
tests/unit/: test_apply_overrides.py  test_cleanup_rules.py  test_compose_specs.py  test_fetch_digests.py  test_generate_condition.py  test_generate_trans_specs.py  test_list_entities.py  test_map_data.py  test_notify.py  test_parse_trans_spec_slug.py  test_prepare_input.py  test_prepare_metadata.py  test_provenance.py  test_remove_empty_columns.py  test_replace_values.py  test_resolve_source.py  test_resolve_trans_spec_dir.py  test_updated_flatten_to_tsv.py
toy_data/: README.md  demographic.tsv  lab_result.tsv  sample.tsv  study.tsv  subject.tsv  target-schema.yaml
toy_data/create/: README.md  bdc_required.md  generate_dbgap_toy.py  generate_toy_data.py  include_required.md
toy_data/data_dictionary/: README.md  include-bp_data_dictionary.tsv  toy_data_dictionary.tsv
toy_data/dbgap/: config.mk  target-schema.yaml
toy_data/enum_test/: config.mk  source-schema.yaml  target-schema.yaml
toy_data/from_raw/: config.mk
toy_data/improved/: README.md
toy_data/initial/: demographics.tsv  sample.tsv  subject.tsv
toy_data/linkml-map-data/: example-data_bdchm_updated_3.yaml
toy_data/pre_cleaned/: config.mk  source-schema.yaml
toy_data/raw_data/: demographics.tsv  lab_results.tsv  study.tsv  subject.tsv  visit.tsv
toy_data/raw_data_conditions/: README.md  conditions_complex-questions.tsv  conditions_headers.tsv  conditions_simple.tsv
toy_data/schema-automator-data/: ToySchema.yaml
toy_data/schemas/: source-schema.yaml  target-schema.yaml
toy_data/specs/: person-spec.yaml
toy_data_w_enums/: config-enums.mk  config-orig-valmaps.mk  config.mk  target-schema-enums.yaml  target-schema-orig-valmaps.yaml
(+121 files in other folders)
