[project]
name = "dm-bip"
version = "0.0.0"
description = "dm-bip"
authors = [{ name = "Corey Cox", email = "corey@tislab.org" }]
requires-python = ">=3.11,<=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "importlib-metadata>=8.2.0",
    "pandas>=2.2.3,<3",
    "schema-automator==0.5.4-rc1",
    "schemasheets==0.4.0",
    "linkml-map==0.3.9-rc1",
    "typing-extensions>=4.0,<5",
    "flatten-dict>=0.4.2,<0.5",
    "typer>=0.20.0",
]

[project.scripts]
dm-bip = "dm_bip.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "tox>=4.16.0",
    "tox-uv>=1.11.3",
    "pre-commit>=3.3.3",
    "ruff>=0.12.9",
    "coverage>=7.3.0",
    "pytest-cov>=6.0",
    "codespell>=2.4.1",
    "docstr-coverage>=2.3.2",
    "rstfmt>=0.0.14",
    "ipykernel>=6.29.5,<7",
    "notebook>=7.4.2,<8",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.2.0",
    "sphinx-click>=4.3.0",
    "myst-parser>=0.18.1",
]
env = [
    "poetry>=2.0.1,<3",
    "cruft>=2.16.0,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "env",
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 120
target-version = ["py312", "py313"]

[tool.ruff]
target-version = "py312"
line-length = 120
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
]

extend-ignore = [
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    "D203",  # `blank-line-before-docstring`
    "S101",  # `assert`
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "D",
    "S602",
    "S603",
    "S607",
]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
# ignore-words-list = ""

[tool.coverage.run]
source = ["dm_bip"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
